[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Fonts/TestFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://SubScenes/Player/PlayerBody.tscn" type="PackedScene" id=3]

[node name="Player1" type="Node"]
script = ExtResource( 1 )

[node name="PlayerBody" parent="." instance=ExtResource( 3 )]
position = Vector2( 863, 194 )

[node name="TurnTimer" type="Timer" parent="."]
one_shot = true

[node name="NametagPosition" type="Position2D" parent="."]

[node name="PlayerNametag" type="Label" parent="NametagPosition"]
margin_left = -140.0
margin_top = -45.0
margin_right = 141.0
custom_fonts/font = ExtResource( 2 )
text = "Player 1"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]

[editable path="PlayerBody"]
